docs: document implementation selection with YBindingFactory
Add documentation for choosing between JNI and Panama implementations:
- Update main README with module descriptions for ycrdt-core, ycrdt-jni, ycrdt-panama
- Add "Choosing an Implementation" section with YBindingFactory usage
- Include comparison table (Java version, features, maturity)
- Document Gradle dependencies and Panama JVM args
- Update ycrdt-jni README to show both factory and direct usage patterns

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>